<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/id_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_txt"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="#000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/task_title_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/task_title_txt"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                app:layout_constraintStart_toEndOf="@+id/id_txt"
                app:layout_constraintTop_toTopOf="@+id/id_txt" />

            <TextView
                android:id="@+id/task_author_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_author_txt"
                app:layout_constraintStart_toStartOf="@+id/task_title_txt"
                app:layout_constraintTop_toBottomOf="@+id/task_title_txt" />

            <TextView
                android:id="@+id/task_number_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_number_txt"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>